    affect us.
  * Respect the CONCURRENCY_LEVEL environment variable before taking
    a guess based on DISTCC_HOSTS of how many jobs to load make with.
    People may have that set for use with make-kpkg, and consistency
    here is surely a Good Thing.
  * Fix strange and invalid cast-assignment construct in sndesd.cpp
    and sndoss.cpp
  * Update FSF address in copyright file.

 -- Ron Lee <ron@debian.org>  Sat,  13 Apr 2006 03:06:11 +1030

wxwindows2.4 (2.4.4.1.1-0.1) unstable; urgency=low

  * Non-maintainer upload.
  * Make it build using the new make.  Patch from 
    Daniel Schepler <schepler@math.berkeley.edu> (Closes: #350696)

 -- Kurt Roeckx <kurt@roeckx.be>  Sun,  9 Apr 2006 12:24:28 +0200

wxwindows2.4 (2.4.4.1.1) unstable; urgency=low

  * Disable building of the common packages.  The 2.6 source package
    builds them now and that precludes 'earlier' versions from being
    provided by this one in future.  It is a bit premature, but
    clearly a goal to punt toward for etch.

 -- Ron Lee <ron@debian.org>  Tue, 23 Aug 2005 00:43:23 +0930

wxwindows2.4 (2.4.4.1) unstable; urgency=low

  * Rebuild for the xorg transition ^W^W^W^W^W^W
  * Add conflicts/replaces for the Ubuntu -c2 branded packages.
  * Update fr.po, thanks to Thomas Huriaux and debian-l10n-french.
    Closes: #323587
  * Rearrange the wxPython packages to comply with the Debian -python
    policy now that we have one, and to better support apps that
    depend on a particular version of wxPython.
  * Backport the multi-version install system from 2.6 where helpful.
  * Fully automate priority creep in the lib package alternatives.
  * Collapse the wx-common package, it does not need multiple versions
    present simultaneously.

 -- Ron Lee <ron@debian.org>  Sat, 16 Jul 2005 16:03:52 +0930

wxwindows2.4 (2.4.4) unstable; urgency=low

  * Remove the (apparently long obsolete) #pragma interface goop.
    Fixes gcc4 builds, and reduced library bloat too.  Closes: #309216