@@ -52,18 +52,12 @@ wx-i18n			message catalogs for native language support
 
 
 	The following binaries can be built from the source package
-	with the mingw32 cross compiler, but are not currently
-	distributed by Debian.  If you feel that should change,
-	please file a bug against the wxwindows2.4 package, or
-	append your views to a report already there if you're not
-	the first to do so.
+	with the mingw32 cross compiler, but are not distributed
+	as a part of the main Debian distribution.
 
-	[ you can check the current state of affairs at:
-	  http://bugs.debian.org/cgi-bin/pkgreport.cgi?pkg=wxwindows2.4 ]
-
-	Oh and, please do *not* file bug reports for these packages
-	to the Debian bts.  But do feel free to email me personally
-	if you find problems and/or have patches to fix them.
+	Please do *not* file bug reports for these packages to the
+	Debian bts.  But do feel free to email me personally if you
+	find problems and/or have patches to fix them.
 
 libwxmsw-dev		mingw32-cross wxMSW libs.
 libwxmsw-dbg		mingw32-cross wxMSW (debug) libs.
@@ -93,6 +87,13 @@ wx-headers-msw		extra headers needed for wxMSW.
 	you have listed in DISTCC_HOSTS.  This will work for both native
 	and cross builds of the c++ libraries, if you have the relevant
 	compilers on all your build hosts.
+	You may override that heuristic by setting the CONCURRENCY_LEVEL
+	environment variable to the number of jobs you wish make to fork.
+	That variable is also supported by the kernel-package scripts and
+	is respected for consistency here.
+
+	wxPython builds cannot be parallelised at this stage and will run
+	serially regardless of your configuration.
 
 
  -- Ron Lee <ron@debian.org>, Sun, 13 Feb 2000 18:40:00 +1030
