@@ -102,7 +102,7 @@ under two different licences:
   along with this software, usually in a file named COPYING.LIB.  If not,
   write to the Free Software Foundation, Inc., 51 Franklin St, Fifth Floor,
   Boston, MA 02110-1301, USA.
-  
+
   EXCEPTION NOTICE
 
   1. As a special exception, the copyright holders of this library give
